# Pi_armadillo

./: README.md  datainformation.py
GUI/: VideoApp.kv  amplus_LED_sign.py  bar_gauge_pygame.py  checkbox.py  dspumps_pygame_control.py  dsvalves_pygame_control.py  example_trend.py  instrument_status_bar.py  keigan_pygame_control.py  keigan_pygame_control_rtsp.py  kivy_rtsp_vis_player.py  menu_example.py  ocr_webserver_paddle.py  os_command.py  pointcloud_visualize.cc  pyg_menu.py  pygame_trend.py  pysimpleGUI_csvView.py  rtsp_screen.py  splinter_webbrowser_control.py  stock_control_parent_child.py  streamlit_supabase_unit_operation.py  tabs2space.py  tank_seq_pygame.py  tank_seq_pygame_failstate.py  time_diff_form.py  tkinter_network_tool.py  tkinter_window_menus.py  yolov8_pygui_data.py
IR/: AC_Class.py  BandO.py  ir_rcv_snd.py
ITL612 IR SENSOR/: itl612.c  itl612.h  itl612_old.h  test_ir.c  test_ir_lib1.c
LoRa/: FlipClickLoRaSend.py  LoRa_OPCUA_Node.py  LoRa_OPC_GW.py  gatewayLoRaRcv.py  lora.py  piLoRaRcv.py  piLoRaRcv4.py  piLoRaRcv_Master.py  sigfox_master_plc.py  sigfox_slave_plc.py
ML/: GAN_torch.py  MNIST_torch.py  RL_Example1.py  RL_Keras_Gym_DDQN.py  RL_PPO.py  RL_frozen_lake_epis_greedy.py  manga_ocr.py  mbodi_emmaX.py  nelder_mead.py  nelder_mead2.py  nelder_mead_function_class.py  omlet_route_planner.py  openAI_PID_RL.py  raspicam_openvla_sakana.py  sklearn_example.py  smoldocling.py  svm_color_compare.py  torch_cnn.py  vlm_moellava.py  weather_data.csv  weather_learn.py  webcam_openvla_sakana.py
PCIe Hailo/: HailoYOLODetector.py  find_traffic_light.py  manipulation_functions.py
QR code ANPR stuff/: QRCode_reader_cv2.py  QRCode_reader_webcam_stations.py  QRCode_writer2.py  QR_Reader_Lib.py  anpr_video.py
SonyAlpha/: CMakeLists.txt  CMakeSettings.json
SonyAlpha/app/: CameraDevice.cpp  CameraDevice.h  RemoteCli.111022  RemoteCli.120922  RemoteCli.130922  RemoteCli.140922also_ok  RemoteCli.140922ok  RemoteCli.150922ok  RemoteCli.150922ok3  RemoteCli.cpp  RemoteCli.multi_111022  RemoteCli.strand  RemoteCli_2.120922  abd_include.h  abd_sony.cpp  abd_sony.h  blocking_reader.h  boost_cam_actions.cpp  boost_free_space.cpp  boost_serial_class.cpp  color.hpp  dpm_init.ini  focus_adjust.h  focus_adjustment.h  ini_file_reader.cpp  ini_file_reader.old  json_file_reader.cpp  mavlink_status_message.h  mavlink_status_msg.cpp  object_store_class.cpp  object_store_class.hpp  poco_script_runner.cpp  random_seq_gen.cpp  sample.conf  shutter_speed_adjust.cpp  sony_a7_enumerate.cpp  sony_a7_enumerate.hpp  sony_new_xml.xml  x  xml_adjust.cpp  (+1 more)
Toshiba Telli/: teli.py  tosh_telli.py  tosh_telli1.cpp
ada_spark/: Sensor_Fusion_Get_Euler.adb
ble/: ble_debugging.txt  ble_ember_mug_find.py  ble_env_sensor.py  ble_getdata_embermug.py  ble_getdata_embermug_exc.py  ble_paired_devices.py
boost_other/: app.cpp  boost_loger.cpp  boost_logfile.cpp  boost_string.cpp  child.cpp  child2.cpp  child3.cpp  hash.cpp  http_client.cpp  initLog.cpp  loger_with_filt.cpp  main.cpp  simpleLogger.h  simple_timer.cpp  trip.cpp  wiris.cpp  wiris_net_cli.cpp
boost_prog/: b_t.cpp  boost_args.cpp  boost_args2.cpp  boost_cap.cpp  boost_child.cpp  boost_clamp.cpp  boost_free_space.cpp  boost_free_space2.cpp  boost_free_space3.cpp  boost_free_space4.cpp  boost_loger.cpp  boost_logfile.cpp  boost_mutex.cpp  boost_mutex2.cpp  boost_mutex3.cpp  boost_mutex4.cpp  boost_mutex5.cpp  boost_net.cpp  boost_parse_args.cpp  boost_tcp.cpp  boost_tim_interrupt.cpp  child.cpp  child4.cpp  child5.cpp  child6.cpp  chrono2.cpp  disk_space.cpp  ex.cpp  exception_test.cpp  filename.json  format_test.cpp  french_17.cpp  french_18.cpp  ini_file_reader.cpp  ini_reader.cpp  json2.cpp  json3.cpp  json4.cpp  jsontest.cpp  lev_test.cpp  (+51 more)
card reader/: card_reader.py  card_reader_2.py  s300_acr1251_examples.py  sony_rc_s300-2.rs  sony_rc_s300.rs
cash/: Payter_Serial_PSP.py  apple_pay.py  card_reader_felica.py  cct_billy_one_test.py  cct_coin_messanger.py  cct_tools.py  cctalk.py  cxxopts.hpp  eSSP.py  eSSP_example.py  emv_reader_funcs_dlogic.cpp  impulsive_coin_receptor.py  models.py  openCVTess_Card_Reader.py  pay_jp.py  paymentprocessing.py  paypay.py  stripe_example.py  wechat.py
coAP/: client_get.py.txt  client_put.py.txt  server.py
concept pics/: 1711353125082.jfif
crow/: bbs.htm  crow_mustache.cpp  style.css
data_manip/: SPC_chart.py  binary_parser.py  blood_press_ML.py  boost_test_example.cpp  bubble_sort.cpp  cereal_json_move.cpp  control_sympy_examples.py  cppUtest.cpp  csv_database.py  csv_sorter.cpp  diffcp.py  ecg_ble_to_sql.cpp  file_parser.py  flann.cpp  float2bits.c  geospacial_data_formats.py  heart_rate.py  http_raw.py  ipp_printer_info.py  job_seacher.py  kmeans1.py  levenburg_marquardt.py  linear_reg_using_torch.py  linux_pipe_example.py  mass_spring_damper.py  med_inst_lib.py  nmap_check.py  rand_dist_class.cpp  random_num_class.cpp  random_num_distrib.cpp  runga_kutta.py  scipy_KDTree.py  scipy_signal_opt.py  simple_torch_nn.py  simpy_ex1.py  sonar_roc_curve.py  steam_tables.py  struct_sorter.cpp  time_manip.py  weather_past_present.py  (+1 more)
dicom/: dicom.py  dicom_files.py
drone/: Mav_Raspicade.cpp  Mav_Raspicade2.cpp  Mav_Raspicade3.cpp  Tellio_Raspicade.cpp  coDrone.py  crazyflie.py  crazyflie_csi_camera.py  crazyflie_gs_tracker.cpp  cyphal_uavcan_PID_temp.py  dronekit_speech_move.py  gs_tracker_video_server.cpp  skydio_api.py  tello.py  tello_color_tracker.py  tello_drone_control.cpp  tello_joypad,rs  tello_tracker.cpp
echonet/: power_meter.py
erlang/: elixir.exs  erlang2.erl
face_robot/: face_dictionary_creat.py  face_dictionary_view.py  face_robot.py  rospy_gripper.py  yolo.py
fqueue/: LevelPID.py  config.ini  filter_seq.py  five_prio_q_with_modbus_sl_ma.py  modbus_novus_procon.py  sequence_recipe.ini  timed_sequencing.py
germination/: I2C_LDC_driver.py  adafruit_hum_temp_lux.py  gc_controller_v2.py
hardware/: GWSS03T_servo_angle.py  aptpod_canbus_rw.cpp  dht11.py  dht11_adafruit.py  dht11_lowlevel_test.py  pwm.py  (+10 more)
video/opencv_screenwriter/: CMakeLists.txt  opencv_screenwriter.cpp
(+721 files in other folders)
